--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
-name: Auto Commit
+name: Auto Commit Random Natural
 
 on:
   schedule:
-    # Menjalankan setiap hari pukul 00:00 UTC
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * *" # start tiap hari jam 00:00 UTC
   workflow_dispatch:
 
 jobs:
@@ -15,47 +14,35 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-        # Penting: Fetch semua history agar rebase atau merge berjalan dengan baik
         with:
-          fetch-depth: 0 # Mengambil semua history untuk semua branch dan tag
+          fetch-depth: 0
 
-      - name: Create or Update a File for Commit
+      - name: Random Delay Sebelum Mulai
         run: |
-          # Menggunakan '>>' untuk menambahkan ke file (append), bukan menimpa ('>')
-          # Ini akan mengurangi kemungkinan konflik jika file ini adalah semacam log.
-          echo "Pembaruan terakhir pada $(date)" >> last_update.txt
+          # Random delay sebelum mulai commit (0–8 jam)
+          DELAY=$(( RANDOM % 28800 )) # 28800 detik = 8 jam
+          echo "Menunggu $DELAY detik (~$((DELAY/3600)) jam) sebelum mulai..."
+          sleep $DELAY
 
-      - name: Stage and Commit Changes
+      - name: Random Commit
         run: |
           git config --global user.name 'Yawwnann (Bot)'
-          git config --global user.email 'c0478592@gmail.com' # Ganti dengan email yang sesuai
-          git add -A
-          if ! git diff --staged --quiet; then
-            git commit -m "Auto-commit: Pembaruan terjadwal pada $(date)"
-            echo "Perubahan berhasil di-commit."
-          else
-            echo "Tidak ada perubahan untuk di-commit."
-          fi
+          git config --global user.email 'c0478592@gmail.com'
 
-      - name: Pull Remote Changes and Push
-        run: |
-          # Cek apakah ada commit yang baru saja dibuat oleh workflow ini
-          if git log -1 --pretty=%B | grep -q "Auto-commit"; then
-            echo "Ada commit baru dari 'Auto-commit'."
+          # Random jumlah commit antara 10–20
+          JUMLAH=$(( ( RANDOM % 11 ) + 10 ))
+          echo "Hari ini akan membuat $JUMLAH commit."
 
-            # Sinkronkan dengan perubahan dari remote sebelum push
-            # Menggunakan rebase untuk menjaga history lebih linear.
-            echo "Melakukan pull dari remote dengan rebase..."
-            # Jika Anda terus mengalami konflik dengan rebase bahkan setelah append,
-            # Anda bisa mencoba 'git pull' (merge) sebagai alternatif,
-            # atau mempertimbangkan strategi resolusi konflik otomatis jika sesuai.
-            git pull --rebase # Atau git pull (untuk merge)
+          for i in $(seq 1 $JUMLAH)
+          do
+            echo "Commit ke-$i pada $(date)" >> last_update.txt
+            git add last_update.txt
+            git commit -m "Auto-commit #$i pada $(date)"
 
-            echo "Mendorong perubahan ke remote..."
-            git push
-            echo "Perubahan berhasil di-push."
-          else
-            echo "Tidak ada commit baru dari 'Auto-commit' untuk di-push atau tidak ada perubahan."
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            # Random delay antar commit (30–300 detik)
+            JEDA=$(( ( RANDOM % 271 ) + 30 ))
+            echo "Tunggu $JEDA detik sebelum commit berikutnya..."
+            sleep $JEDA
+          done
+
+          git push
